# visual-montage-pipeline

./: .env.example  .gitignore  HANDOFF_2026-07-16.md  README.md  pyproject.toml
config/: default.yaml  models.yaml
data/assets/: asset-library.yaml
data/catalog/: candidate-registry.sqlite
data/inputs/: category-map.yaml
profiles/categories/: anime.yaml  beauty.yaml  cosmetics_recommendation.yaml  food.yaml  overall_makeup.yaml  short_drama.yaml  travel.yaml
prompts/gemma-review/: anime.md  beauty.md  cosmetics_recommendation.md  food.md  overall_makeup.md  short_drama.md  travel.md
prompts/marlin-events/: anime.yaml  beauty.yaml  cosmetics_recommendation.yaml  food.yaml  overall_makeup.yaml  short_drama.yaml  travel.yaml
scripts/: analyze_visual_batch.py  build_weekly_manifest.py  export_jianying_plan.py
skill/visual-highlight-montage/: SKILL.md
src/visual_montage/: __init__.py  audio_bgm.py  audio_levels.py  author_overlay.py  batch.py  batch_runner.py  candidate_registry.py  cli.py  clip_preview_legacy.py  cover.py  cover_image2.py  cover_selector.py  gemma.py  io.py  marlin_routing.py  models.py  montage.py  music_features.py  packaging.py  pipeline.py  remote.py  review_server.py  scoring.py  storage.py  subtitles.py  voiceover.py
src/visual_montage_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/worker_stubs/: __init__.py  (+9 more)
tests/: test_author_id_overlay.py  test_candidate_registry.py  test_category_profiles.py  test_core.py  test_cover_image2.py  test_marlin_gemma_review.py  test_weekly_manifest.py
(+14 files in other folders)
